--- a/config/database.yml
+++ b/config/database.yml
@@ -19,11 +19,14 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool:  5
 
 development:
   <<: *default
   database: BacancyProjectManagement_development
+  username: postgres
+  password: postgres
+  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
